# catmull-clark-optimise

./: README.md  benchmarks.html  catmull-clark-optimise-exe.ps  catmull-clark-optimise.cabal  shell.nix  stack.yaml
app/: Main.hs
benchmarks/: Bench.hs
res/: V0-6.prof  V1-6.prof  V2-6.prof  V3-6.prof
src/Mesh/: V0.hs  V1.hs  V2.hs  V3.hs  V4.hs
