name:                catmull-clark-optimise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fuuzetsu/catmull-clark-optimise#readme
license:             BSD3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mesh.V0
                       Mesh.V1
                       Mesh.V2
                       Mesh.V3
                       Mesh.V4
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , double-conversion
                     , text
                     , vector
  default-language:    Haskell2010
  ghc-options:         -O2

executable catmull-clark-optimise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , catmull-clark-optimise
  default-language:    Haskell2010

benchmark catmull-clark-optimise-bench
  type:            exitcode-stdio-1.0
  hs-source-dirs:  benchmarks
  main-is:         Bench.hs
  ghc-options:     -O2 -threaded
  build-depends:    base
                  , catmull-clark-optimise
                  , criterion

test-suite catmull-clark-optimise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , catmull-clark-optimise
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Fuuzetsu/catmull-clark-optimise
